[gd_scene load_steps=10 format=3 uid="uid://btcyop0so1g7h"]

[ext_resource type="Script" path="res://scenes/online_battle/p2p_battlefield/p2p_gui/p2p_gui.gd" id="2_4obiv"]
[ext_resource type="Theme" uid="uid://b8ikq1gvmxsgp" path="res://resources/theme.tres" id="2_guf6c"]
[ext_resource type="PackedScene" uid="uid://bsad8f7goqbjv" path="res://scenes/online_battle/p2p_battlefield/p2p_gui/p2p_spawn_buttons/p2p_spawn_buttons.tscn" id="2_yp16q"]
[ext_resource type="PackedScene" uid="uid://da3r4sj0ik6iq" path="res://scenes/online_battle/p2p_battlefield/p2p_gui/p2p_skill_buttons/p2p_skill_buttons.tscn" id="4_hksxv"]
[ext_resource type="PackedScene" uid="uid://dmdc60cjuki5p" path="res://scenes/battlefields/common/base_battlefield/gui/efficiency_up_button/efficiency_up_button.tscn" id="5_ehgkl"]
[ext_resource type="Script" path="res://scenes/online_battle/p2p_battlefield/p2p_gui/p2p_efficiency_up_button.gd" id="6_5sgev"]
[ext_resource type="PackedScene" uid="uid://cei0cobk4qs0j" path="res://scenes/battlefields/common/base_battlefield/gui/camera_control_buttons/camera_control_buttons.tscn" id="7_57tuo"]
[ext_resource type="PackedScene" uid="uid://dwvv60owbdqf2" path="res://scenes/online_battle/p2p_battlefield/p2p_gui/surrender_button/surrender_button.tscn" id="9_cy2he"]
[ext_resource type="PackedScene" uid="uid://o5g8frhvrf6b" path="res://scenes/online_battle/p2p_battlefield/p2p_gui/surrender_battle_popup/surrender_battle_popup.tscn" id="9_nnkph"]

[node name="OnlineGui" type="CanvasLayer"]
script = ExtResource("2_4obiv")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -316.0
offset_top = 22.0
offset_right = 1792.0
offset_bottom = 316.0
grow_horizontal = 2
scale = Vector2(0.35, 0.35)
alignment = 1

[node name="P2PSpawnButtons" parent="HBoxContainer" instance=ExtResource("2_yp16q")]
unique_name_in_owner = true
layout_mode = 2

[node name="MoneyLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 260.0
offset_top = 124.0
offset_right = 370.0
offset_bottom = 172.0
theme = ExtResource("2_guf6c")
theme_type_variation = &"LabelLarge"
text = "0/100 â‚µ"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -566.0
offset_top = -459.0
offset_right = -566.0
offset_bottom = -459.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.35, 0.35)
size_flags_horizontal = 8
size_flags_vertical = 8
alignment = 1

[node name="P2PSkillButtons" parent="HBoxContainer2" instance=ExtResource("4_hksxv")]
unique_name_in_owner = true
layout_mode = 2

[node name="EfficiencyUpButton" parent="." instance=ExtResource("5_ehgkl")]
offset_left = -36.0
offset_top = -40.0
offset_right = 346.0
offset_bottom = 337.0
scale = Vector2(0.585068, 0.585068)
script = ExtResource("6_5sgev")

[node name="SurrenderButton" parent="." instance=ExtResource("9_cy2he")]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -104.0
offset_top = 19.0
offset_right = -14.0
offset_bottom = 109.0
grow_horizontal = 0

[node name="CameraControlButtons" parent="." instance=ExtResource("7_57tuo")]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 201.0
offset_top = 134.0
offset_right = 341.0
offset_bottom = 166.0
grow_horizontal = 2

[node name="SurrenderBattlePopup" parent="." instance=ExtResource("9_nnkph")]
visible = false
